# youtube_clipboard_hook

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  makefile
app/: main.py
app/views/: index.html
config/: config.json
docs/: architecture.md  contributing.md  setup.md  usage.md
scripts/: clippy_app  daudio.sh  manage.sh
service/: clippy_configure.service  clippy_hook.service
src/: Options  config.rs  consts.rs  downloader.rs  error_handlers.rs  folder_settings.rs  lib.rs  logger.rs  main.rs  monitor.rs  options.rs  spawner.rs
