[package]
name = "clippy_hook"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = { version = "3.2.0", features = ["wayland-data-control"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "8.1.0"
[[bin]]
name = "clippy_cli"
path = "src/bin/cli.rs"

[[bin]]
name = "clippy_daemon"
path = "src/bin/daemon.rs"
